# live555

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/flyzebra/live555/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: RtspClientJNI.cpp  rtspclient.cpp  testRTSPClient.cpp
app/src/main/cpp/live555/: CMakeLists.txt  livertspclient.cpp  rtspclient.cpp
app/src/main/cpp/live555/groupsock/: GroupsockHelper.cpp
app/src/main/cpp/live555/groupsock/include/: NetCommon.h
app/src/main/cpp/live555/include/: livertspclient.h
app/src/main/java/com/flyzebra/live555/: MainActivity.java
app/src/main/java/com/flyzebra/live555/decoder/: MediaDecoder.java
app/src/main/java/com/flyzebra/live555/rtsp/: FlyLog.java  IRtspCallBack.java  RtspClient.java  RtspVideoView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: styles.xml
app/src/test/java/com/flyzebra/live555/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
